linuxCourse/linux2019/linuxer#9

--- a/etc/server.conf
+++ b/etc/server.conf
@@ -1,13 +1,13 @@
 STUDENT_PATTERN="51201[4][0-9]{4}"
 STUDENT_ID="5120140001"
 STUDENT_GROUP="students"
+SCORE_DIR="/opt/linuxer/score"
+SUBMIT_DIR="/home/"
 
 LAB_IP_PATTERN="^10.11."
 PUBLIC_DOMAIN="vlab.cs.swust.edu.cn"
 IMAGE="vlab.cs.swust.edu.cn:6000/linuxcourse/linuxer/notebook:v1.1"
 IMAGE_MANAGER="vlab.cs.swust.edu.cn:6000/linuxcourse/linuxer/manager:v1.1"
-SUBMIT_DIR="/data/submit"
 EXP_PATTERN="^lab[0-9]{1,}"
 CONTAINER_PORT="8888"
-SCORE_DIR="/data/submit/.score"
 MAX_CONTAINER=60
